--- a/servers/cloudconfig.template
+++ b/servers/cloudconfig.template
@@ -1,4 +1,4 @@
-#cloudconfig
+#cloud-config
 write_files:
   - path: /etc/rc.local
     permissions: "0755"
@@ -7,10 +7,11 @@ write_files:
       #!/bin/bash
       export INSTANCE_ID=$(wget -qO- http://169.254.169.254/latest/meta-data/instance-id)
       wait-for-docker
+      echo 'docker run --rm radial/busyboxplus:curl curl $@' > /usr/bin/curl && chmod +x /usr/bin/curl
       export SPOT=$(docker run --rm \
         -e AWS_ACCESS_KEY_ID="${aws_access_key}" \
         -e AWS_SECRET_ACCESS_KEY="${aws_secret_key}" \
-        -e AWS_DEFAULT_REGION="us-west-2" \
+        -e AWS_DEFAULT_REGION="${region}" \
         mesosphere/aws-cli ec2 describe-instances --instance-ids $INSTANCE_ID | \
         grep -o '"InstanceLifecycle": "spot"')
       export LIFECYCLE=$([[ -z "$SPOT" ]] && echo "dedicated" || echo "spot")
@@ -25,6 +26,17 @@ write_files:
         -e CATTLE_HOST_LABELS="id=$INSTANCE_ID&lifecycle=$LIFECYCLE" \
         -v /var/run/docker.sock:/var/run/docker.sock \
         rancher/agent:v${rancher_version} ${rancher_register_url}
+  - path: /etc/rc0.d/S01ec2-termination
+    permissions: "0755"
+    owner: root
+    content: |
+      #!/bin/bash
+      docker run --rm \
+        -e CLOUDFLARE_API_KEY=${cloudflare_api_key} \
+        -e CLOUDFLARE_EMAIL=${cloudflare_email} \
+        -e CLOUDFLARE_WEBSITE=${cloudflare_website} \
+        -e SUBDOMAIN=servers \
+        codejamninja/dns-register:latest unregister
 rancher:
   docker:
     engine: ${docker_version}
