--- a/servers/cloudconfig.template
+++ b/servers/cloudconfig.template
@@ -5,6 +5,8 @@ write_files:
     owner: root
     content: |
       #!/bin/bash
+      mkdir -p /var/log/boot
+      exec > /var/log/boot/cloud-config.log 2>&1
       export INSTANCE_ID=$(wget -qO- http://169.254.169.254/latest/meta-data/instance-id)
       wait-for-docker
       echo 'docker run --rm radial/busyboxplus:curl curl $@' > /usr/bin/curl && chmod +x /usr/bin/curl
